Revision history for Time::DoAfter

{{$NEXT}}
        - last() is now also a setter (was just a getter)

1.03      2016-09-12 19:18:17-07:00 America/Los_Angeles
        - do() now returns total time it slept for

1.02      2016-09-09 10:44:05-07:00 America/Los_Angeles
        - Removed incorrectly included cover_db dir/files

1.01      2016-09-09 08:35:05-07:00 America/Los_Angeles
        - First version, released on an unsuspecting world